ddetect (0.67) UNRELEASED; urgency=low

  * Joey Hess
    - Avoid an infinite loop in ethdetect if there are no ethernet drivers
      available at all.

 -- Joey Hess <joeyh@debian.org>  Thu,  5 Feb 2004 19:58:04 -0500

ddetect (0.66) unstable; urgency=low

  * Christian Perrier
    - Switch one template in ethdetect to error type
  * Translations
    - Bartosz Fenski
      - Updated Polish (pl) translation.
    - Giuseppe Sacco
      - applied patch for normalizing menus and some italian translation (it.po)
    - Kenshi Muto
      - Updated Japanese translation (ja.po)
    - Miguel Figueiredo
      - Updated Portuguese translation (pt.po)
    - André Luís Lopes
      - Updated Brazilian Portuguese (pt_BR) translation.
    - h3li0s
      - Added Albanian translation (sq.po)
    - Jordi Mallach
      - Update Catalan translation (ca.po).
    - Kęstutis Biliūnas
      - Update Lithuanian translation (lt.po).
    - Alwin Meschede
      - Updated German translation (de.po)
    - Safir Šećerović
      - Update Bosnian translation (bs.po).
    - Christian Perrier
      - Updated French (fr) translation.
    - Bart Cornelis
      - Updated Dutch (nl.po) translation

 -- Joey Hess <joeyh@debian.org>  Thu,  5 Feb 2004 14:50:56 -0500

ddetect (0.65) unstable; urgency=low

  * Petter Reinholdtsen
    - Move install request for hotplut into hw-detect, next to
      the install request for discover.
  * Joey Hess
    - Continue after manual module loading w/o displaying
      ethdetect/cannot_find. Thanks, Sylvain Ferriol.
    - Make hw-detect list the modules it plans to load at medium priority,
      so the user can opt not to load known-problimatic modules.
  * Christian Perrier
    - Removed "Choose the modules to load" by "Modules to load"
      for consistency with other d-i modules prompting
    - s/linux/Linux in templates
  * Translators:
    - Peter Mann: Update Slovak translation
    - Carlos Z.F. Liu