@@ -3,6 +3,9 @@ ddetect (0.67) UNRELEASED; urgency=low
   * Joey Hess
     - Avoid an infinite loop in ethdetect if there are no ethernet drivers
       available at all.
+  * Matt Kraai
+    - Always ask for module parameters when loading the ne module (closes:
+      #220971).
 
  -- Joey Hess <joeyh@debian.org>  Thu,  5 Feb 2004 19:58:04 -0500
 
